LaTeX : chapter physics

--- a/LaTeX/Rapport/Hocine.tex
+++ b/LaTeX/Rapport/Hocine.tex
@@ -81,6 +81,20 @@
 \newcommand{\TeV}{\mathrm{TeV}\xspace}
 \newcommand{\MeV}{\mathrm{MeV}\xspace}
 
+\newcommand{\m}[1]{m_\mathrm{#1}}
+\newcommand{\mH}{m_\mathrm{H}}
+\newcommand{\mW}{m_\mathrm{W}}
+
+\newcommand{\vmH}{125,25}
+\newcommand{\vmW}{80,377}
+\newcommand{\vs}{250}
+\newcommand{\vGF}{1,166\,378\,8 \times 10^{-5}}
+\newcommand{\vhc}{0,389\,379\,365\,648} % (hbar c)^2
+
+
+\newcommand{\GF}{G_\mathrm{F}}
+\newcommand{\gHWW}{g_\mathrm{HWW}}
+
 % LaTeX
 
 \newcommand{\doToList}[1]{{\color{red}#1}}
@@ -116,59 +130,161 @@
 
 \subsection{Section efficace}
 
-\paragraph{Fusion $W\Wstar$ \cite{desy}} : \\
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Comme on est à très haute énergie, on peut approximer que $ \sqrt{s} >> 2 $ :
-
-\begin{equation}
-	\sigma_{WW-fusion} \longrightarrow 
-		\frac{g_{HWW}^2 \, G_F^2}{32 \, \pi^3}
-		\left[
-			\left(1 + \frac{m_H^2}{s}\right) \log\left(\frac{s}{m_H^2}\right)
-			- 2 \left(1 - \frac{m_H^2}{s}\right)
-		\right]
-\end{equation}
-
+\subsubsection{Quelques constantes}
+Avant de commencer, je vais rappeler certaines constantes utiles pour la suite tirée du PDG, \textit{Particle Data Group} 2022\cite{Workman:2022ynf} :
 \begin{description}
 
-	\item[$g_{HWW}$] : couplage du boson de Higgs et du boson W
+	\item[$\gHWW$] : couplage du boson de Higgs et du boson W
 
-	\item[$G_F$] : constante de couplage de Fermi\cite{Workman:2022ynf}
+	\item[$\GF$] : constante de couplage de Fermi
 	\footnote{\url{https://pdg.lbl.gov/2021/tables/contents_tables.html}}
-	$$ \frac{G_\mathrm{F}}{\left(\hbar c)\right)^3} = 1,166\,378\,7(6) \times 10^{-5}\, \GeV^{-2} $$
+	$$ \frac{G_\mathrm{F}}{\left(\hbar c\right)^3} = 1,166\,378\,7(6) \times 10^{-5}\, \GeV^{-2} $$
+	$$ (\hbar c)^2 = \vhc \, \GeV^2 \, \mathrm{mbarn} = \vhc \times 10^{-31} \, \mathrm{m}.\GeV^2 $$
 	
-	\item[$m_H$] : masse du boson de Higgs\cite{Workman:2022ynf}
+	\item[$\mH$] : masse du boson de Higgs
 	\footnote{\url{https://pdglive.lbl.gov/Particle.action?node=S126&init=0}}
 	$$ m_\mathrm{H_0} = 125,25 \pm 0,17 \, \GeV $$
-	
-	\item[$s$] : variable de Mandelstam
-	$$ s = \left(p_1 + p_2\right)^2 = \left(p_3 + p_4\right)^2 $$
 		
-\end{description}
-
-%%%%%
-
-\paragraph{La largeur partielle pour $W\Wstar$ \cite{desy}} : \\
-
-\begin{equation}
-	\Gamma\left(H\longrightarrow WW\right) = 
-		\frac{g_{HWW}^2 \, m_H^3}{64 \, \pi \, m_W^2}
-		\left(1 - \frac{4 m_W^2}{m_H^2} + \frac{12 m_W^4}{m_H^4}\right)
-		\left(1 - \frac{4 m_W^2}{m_H^2}\right)^{1/2}
-\end{equation}
-
-\begin{description}
-	
-	\item[$m_W$] : masse du boson W\cite{Workman:2022ynf}
+	\item[$m_W$] : masse du boson W
 	\footnote{\url{https://pdglive.lbl.gov/Particle.action?node=S043&init=0}}
 	$$ m_\mathrm{W} = 80,377 \pm 0,012 \, \GeV $$
 	
+	\item[$s$] : variable de Mandelstam
+	$$ s = \left(p_1 + p_2\right)^2 = \left(p_{e} + p_{p}\right)^2 $$
+	Mes données correspondent aux simulations à : 
+	$$ \sqrt{s} = 250\, \GeV $$
+
 		
 \end{description}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsubsection{Fusion $W\Wstar$ \cite{desy}}
+
+Comme on est à très haute énergie, on peut approximer que $ \sqrt{s} >> 2 \mW $ :
+
+\begin{equation}
+	\sigma_\mathrm{WW-fusion} \longrightarrow 
+		\frac{\gHWW^2 \, \GF^2}{32 \, \pi^3}
+		\left[
+			\left(1 + \frac{\mH^2}{s}\right) \log\left(\frac{s}{\mH^2}\right)
+			- 2 \left(1 - \frac{\mH^2}{s}\right)
+		\right]
+\end{equation}
+
+
+\begin{align*}
+	\sigma_\mathrm{WW-fusion}
+		&\approx\frac{\gHWW^2 \, \GF^2}{32 \, \pi^3}
+		\left[
+			\left(1 + \frac{\mH^2}{s}\right) \log\left(\frac{s}{\mH^2}\right)
+			- 2 \left(1 - \frac{\mH^2}{s}\right)
+		\right]\\
+		&=\gHWW^2\frac{(\hbar c)^6}{32 \, \pi^3}
+		\left[\frac{\GF}{(\hbar c)^3}\right]^2
+		\left[
+			\left(1 + \frac{\mH^2}{s}\right) \log\left(\frac{s}{\mH^2}\right)
+			- 2 \left(1 - \frac{\mH^2}{s}\right)
+		\right]\\
+		&=\gHWW^2\frac{(\vhc)^3}{32 \, \pi^3}
+		\left[\vGF\right]^2
+		\left[
+			\left(1 + \frac{\vmH^2}{\vs^2}\right) \log\left(\frac{\vs^2}{\vmH^2}\right)
+			- 2 \left(1 - \frac{\vmH^2}{\vs^2}\right)
+		\right]\\
+		&\approx \gHWW^2 \times (-6,0466389\times 10^{-15})
+\end{align*}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsubsection{La largeur partielle pour $W\Wstar$ \cite{desy}}
+
+\begin{equation}
+	\Gamma\left(H\longrightarrow WW\right) = 
+		\frac{\gHWW^2 \, \mH^3}{64 \, \pi \, \mW^2}
+		\left(1 - \frac{4 \mW^2}{\mH^2} + \frac{12 \mW^4}{\mH^4}\right)
+		\left(1 - \frac{4 \mW^2}{\mH^2}\right)^{1/2}
+\end{equation}
+
+\begin{align*}
+	\Gamma\left(H\longrightarrow WW\right) 
+	&= \gHWW^2
+		\frac{\vmH^3}{64 \, \pi \, \vmW^2}
+		\left(1 - \frac{4\times \vmW^2}{\vmH^2} + \frac{12\times \vmW^4}{\vmH^4}\right)
+		\left(1 - \frac{4\times \vmW^2}{\vmH^2}\right)^{1/2}\\
+	&= \gHWW^2 
+\end{align*}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsubsection{La section efficace de production du Higgs}
+
+\begin{equation}
+	\sigma_\mathrm{production} = \sigma_\mathrm{WW-fusion} \times \Gamma\left(H\longrightarrow WW\right)
+\end{equation}
+
+\begin{align*}
+	\sigma 
+		&= \frac{\gHWW^2 \, \GF^2}{32 \, \pi^3}
+		\left[
+			\left(1 + \frac{\mH^2}{s}\right) \log\left(\frac{s}{\mH^2}\right)
+			- 2 \left(1 - \frac{\mH^2}{s}\right)
+		\right]
+		\times 
+		\frac{\gHWW^2 \, \mH^3}{64 \, \pi \, \mW^2}
+		\left(1 - \frac{4 \mW^2}{\mH^2} + \frac{12 \mW^4}{\mH^4}\right)
+		\left(1 - \frac{4 \mW^2}{\mH^2}\right)^{1/2} \\
+	\sigma &= \gHWW^4 \frac{\GF^2}{32 \, \pi^4} \frac{\mH^3}{64 \, \mW^2}
+		\left[
+			\left(1 + \frac{\mH^2}{s}\right) \log\left(\frac{s}{\mH^2}\right)
+			- 2 \left(1 - \frac{\mH^2}{s}\right)
+		\right]
+		\left(1 - \frac{4 \mW^2}{\mH^2} + \frac{12 \mW^4}{\mH^4}\right)
+		\left(1 - \frac{4 \mW^2}{\mH^2}\right)^{1/2} \\
+	\sigma \propto \gHWW^4
+\end{align*}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \subsection{Nombre de Higgs attendu}
 
-\subsection{Propriétés à Préciser}
+Le nombre d'évènement est :
+\begin{equation}
+	\mathcal{N}_\mathbox{évènement} 
+	= \mathcal{N}_\mathbox{signal} 
+	+ \mathcal{N}_\mathbox{bruit\ de\ fond}
+\end{equation}
+
+Or le nombre d'évènement détecté est :
+\begin{equation}
+	\mathcal{N}_\mathbox{détecté} 
+	= \mathcal{N}_\mathbox{évènement} \pm \sigma(\mathcal{N}_\mathbox{évènement})
+	= \mathcal{N}_\mathbox{évènement} \pm \sqrt{\mathcal{N}_\mathbox{évènement}}
+\end{equation}
+
+Et le signal est :
+\begin{equation}
+	\mathcal{N}_\mathbox{signal} 
+	= \mathcal{N}_\mathbox{détecté} 
+	- \mathcal{N}_\mathbox{bruit\ de\ fond}
+\end{equation}
+
+Donc le signal est :
+\begin{equation}
+	\mathcal{N}_\mathbox{détecté} 
+	- \mathcal{N}_\mathbox{bruit\ de\ fond} 
+	- \sqrt{\mathcal{N}_\mathbox{évènement}}
+	\leq \mathcal{N}_\mathbox{signal} \leq
+	\mathcal{N}_\mathbox{détecté} 
+	- \mathcal{N}_\mathbox{bruit\ de\ fond} 
+	+ \sqrt{\mathcal{N}_\mathbox{évènement}}
+\end{equation}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%\subsection{Propriétés à Préciser}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
