--- a/LaTeX/Rapport/Hocine.tex
+++ b/LaTeX/Rapport/Hocine.tex
@@ -16,17 +16,17 @@
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{enumitem}
-%\usepackage{feynmp}
+%\usepackage{feynmp}	
 %\usepackage{tikz-feynman}
 
 \usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%% Page de garde %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \author{Alexia \textsc{HOCINE}}
 
 \title{
 	Détecteur SDHCAL pour le signal  $ e^{+} e^{-} \longrightarrow \nu \nu h $ :\\
-	Optimisation et Adaptation de l'analyse de données\\pour le Projet FCC 
+	Optimisation et Adaptation de l'analyse de données\\pour le Projet
+ FCC 
 }
 %Stage M2 Physique, parcours SUBA\\Université de Claude Bernard Lyon 1
 \date{Juillet 2022}
@@ -120,7 +120,7 @@
 
 \input{resutats.tex}
 
-\input{higgs.tex}
+%\input{higgs.tex}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
